force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/MPM4_BASE__Milestone1_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting allows you to adjust how the Milestones PM+ application functions.</description>
    <label>Milestone1 Settings</label>
</CustomObject>