force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Active_Statuses__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Active_Statuses__c</fullName>
    <description>Sets the default active statuses on a project. Each value must be enclosed in single quotes with additional values separated by a comma. Projects with statuses defined in this setting will display on the Summary page; the assigned resources in these projects may also receive task start date notifications.</description>
    <inlineHelpText>Sets the default active statuses on a project. Each value must be enclosed in single quotes with additional values separated by a comma. Projects with statuses defined in this setting will display on the Summary page; the assigned resources in these projects may also receive task start date notifications.</inlineHelpText>
    <label>Active Statuses</label>
    <type>TextArea</type>
</CustomField>