force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Allow_Blank_Resource_On_Milestone_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Allow_Blank_Resource_On_Milestone_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, users gain the ability to populate a blank value for the Resource__c field on Milestone_Task__c. Leave this unchecked if using Auto_Resource_Assignment__c.</description>
    <inlineHelpText>When checked, users gain the ability to populate a blank value for the Resource__c field on Milestone_Task__c. Leave this unchecked if using Auto_Resource_Assignment__c.</inlineHelpText>
    <label>Allow Blank Resource on Milestone Task</label>
    <type>Checkbox</type>
</CustomField>