force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Allow_Duplicate_Resource_Records__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Allow_Duplicate_Resource_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, multiple Resource records may be created for a single Contact or User.</description>
    <inlineHelpText>When checked, multiple Resource records may be created for a single Contact or User.</inlineHelpText>
    <label>Allow Duplicate Resource Records</label>
    <type>Checkbox</type>
</CustomField>