force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Follow_Complete_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Follow_Complete_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Task is marked &apos;Complete&apos;, Automatically unsubscribe the Assigned User from the Chatter Feed for the Task.</description>
    <inlineHelpText>When a Task is marked &apos;Complete&apos;, Automatically unsubscribe the Assigned User from the Chatter Feed for the Task.</inlineHelpText>
    <label>Auto UnFollow A Complete Task</label>
    <type>Checkbox</type>
</CustomField>