force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Follow_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Follow_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Task is Assigned to a User, automatically subscribe the user to follow the task.</description>
    <inlineHelpText>When a Task is Assigned to a User, automatically subscribe the user to follow the task.</inlineHelpText>
    <label>Auto Follow A Task</label>
    <type>Checkbox</type>
</CustomField>