force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Milestone_Sharing__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Milestone_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Given the Milestone objects sharing settings are setup to be private or public read only, when tasks are created for a milestone read access will be provided to that milestone for the resource assigned to the new tasks.</description>
    <inlineHelpText>Given the Milestone objects sharing settings are setup to be private or public read only, when tasks are created for a milestone read access will be provided to that milestone for the resource assigned to the new tasks.</inlineHelpText>
    <label>Automatic Task Resource Sharing</label>
    <type>Checkbox</type>
</CustomField>