force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Milestone_Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Milestone_Task_Completion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marks the Milestone as complete if all children tasks are complete, and marks the child tasks as complete if the milestone is marked as complete.</description>
    <inlineHelpText>When enabled:

- If a project is complete, all of the milestones and tasks belonging to the project will be marked as complete.
-If a milestone is complete, all of the tasks belonging to the milestone will be marked as complete.
-If all of the tasks belonging to a milestone are complete the milestone will be marked complete.</inlineHelpText>
    <label>Auto Milestone/Task Completion</label>
    <type>Checkbox</type>
</CustomField>