force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Resource_Assignment__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Resource_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Tasks are created or updated with no resource assignment, they will asynchronously be assigned to a Resource with the least amount of Tasks assigned and the same skills as what is required on the Task. Tasks must have a populated Due Date in order to be automatically assigned to a Resource. (Premium Edition Only)</inlineHelpText>
    <label>Auto Assign Task Resource</label>
    <type>Checkbox</type>
</CustomField>