force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Resource_Team_Assignments__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Resource_Team_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When the &apos;Resource Teams Assigned&apos; field is populated at the Project Task level, Milestones PM+ will automatically assign resources that belong to the assigned teams to the Project Task. (Premium Edition Only)</inlineHelpText>
    <label>Auto Resource Team Assignments</label>
    <type>Checkbox</type>
</CustomField>