force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Auto_Unfollow_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Auto_Unfollow_Reassignment__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Automatically unsubscribe the currently assigned user from the task when it is reassigned to another user.</inlineHelpText>
    <label>Auto Unfollow Reassignment</label>
    <type>Checkbox</type>
</CustomField>