force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Milestone_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Milestone_Email_Field__c</fullName>
    <description>Field used for milestone email templates</description>
    <inlineHelpText>This is the field on the milestone object that will be used for the email template notifications. If left blank, the notification email address field will be used. (Premium Edition Only)</inlineHelpText>
    <label>Custom Milestone Email Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>