force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Milestone_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Milestone_Sort_Order__c</fullName>
    <description>Used to define the milestone sort order for the gantt chart.</description>
    <inlineHelpText>When Defining the sort order please input a coma separated value list using field API names. You may also define ascending or descending order by including ASC/DESC.

For example: Kickoff__c ASC, Deadline__c ASC, Name ASC

The above example will</inlineHelpText>
    <label>Custom Milestone Sort Order</label>
    <type>TextArea</type>
</CustomField>