force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Project_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Project_Sort_Order__c</fullName>
    <inlineHelpText>When Defining the sort order please input a coma separated value list using field API names. You may also define ascending or descending order by including ASC/DESC.

For example: Kickoff__c ASC, Deadline__c ASC, Name ASC</inlineHelpText>
    <label>Custom Project Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>