force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Summary_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Summary_Sort_Order__c</fullName>
    <description>Used to define the sort order of the Summary Tab.</description>
    <inlineHelpText>When Defining the sort order please input a coma separated value list using Project/Program field API names appropriate to the object in use. You may also define ascending or descending order by including ASC/DESC.

For example: Name ASC, Kickoff__c ASC</inlineHelpText>
    <label>Custom Summary Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>