force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Task_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Task_Email_Field__c</fullName>
    <description>The field that is used for the email template notifications</description>
    <inlineHelpText>This is the field on the task object that will be used for the email template notifications. If left blank, the email will be sent to the address in the standard notification email field. (Premium Edition Only)</inlineHelpText>
    <label>Custom Task Email Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>