force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Task_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Task_Sort_Order__c</fullName>
    <description>Used to define the sort order of the gantt chart.</description>
    <inlineHelpText>When Defining the sort order please input a coma separated value list using field API names. You may also define ascending or descending order by including ASC/DESC.

For example: Start_Date__c ASC, Due_Date__c ASC, Name ASC</inlineHelpText>
    <label>Custom Task Sort Order</label>
    <type>TextArea</type>
</CustomField>