force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Days_to_Notify_Before_Task_Start__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Days_to_Notify_Before_Task_Start__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Notify each task&apos;s assigned resource by this number of days before the task start date. Schedule the batch agent on the &quot;Milestones PM+ Help&quot; tab to enable this notification. The notifications are sent out per day at the batch agent&apos;s scheduled run time, exact timing dependent on this Salesforce instance&apos;s resource availability; the parent projects must also be in one of active statuses as defined in the &quot;Active Statuses&quot; setting. (Premium Edition Only)</description>
    <inlineHelpText>Notify each task&apos;s assigned resource by this number of days before the task start date. Schedule the batch agent on the &quot;Milestones PM+ Help&quot; tab to enable this notification. The notifications are sent out per day at the batch agent&apos;s scheduled run time, exact timing dependent on this Salesforce instance&apos;s resource availability; the parent projects must also be in one of active statuses as defined in the &quot;Active Statuses&quot; setting. (Premium Edition Only)</inlineHelpText>
    <label>Days to Notify Before Task Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>