force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Default_Email_Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Default_Email_Template_Folder__c</fullName>
    <inlineHelpText>Email template folder used by default (please paste in the email template folder ID from the URL) (Premium Edition Only)</inlineHelpText>
    <label>Default Email Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>