force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Default_Folder_for_Imports__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Default_Folder_for_Imports__c</fullName>
    <description>Setting where users type in the folder name for the default folder when importing a template</description>
    <inlineHelpText>If this setting is blank or the folder is empty the import template page will default to the &apos;My Personal Documents&apos;</inlineHelpText>
    <label>Default Folder For Imports</label>
    <length>50</length>
    <type>Text</type>
</CustomField>