force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_actual_start_and_end_date_on_MPP__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_actual_start_and_end_date_on_MPP__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to disable the actual start and actual end dates fields from showing up on manage project plan</description>
    <inlineHelpText>Check to disable the actual start and actual end dates fields from showing up on manage project plan</inlineHelpText>
    <label>zDeprecated</label>
    <type>Checkbox</type>
</CustomField>