force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Auto_Resource_Creation__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Auto_Resource_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting is used to prevent the creation of a resource record when a new user is created.</description>
    <inlineHelpText>This setting is used to prevent the creation of a resource record when a new user is created.</inlineHelpText>
    <label>Disable Automatic Resource Creation</label>
    <type>Checkbox</type>
</CustomField>