force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Contact_Notifications__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Contact_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting is used to prevent notification emails being sent to Resources who are Contacts.</description>
    <inlineHelpText>This setting is used to prevent notification emails being sent to Resources who are Contacts.</inlineHelpText>
    <label>Disable Contact Notifications</label>
    <type>Checkbox</type>
</CustomField>