force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Deletion_Plan_Page__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Deletion_Plan_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When disabled the delete column will not be displayed on the manage project plan page. (Premium Edition Only)</inlineHelpText>
    <label>Disable Deletion On Project Plan Page</label>
    <type>Checkbox</type>
</CustomField>