force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Interactive_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Interactive_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the drag and drop functionality on the Gantt Chart. (Premium Edition Only)</description>
    <inlineHelpText>Disable the drag and drop functionality on the Gantt Chart. (Premium Edition Only)</inlineHelpText>
    <label>Disable Interactive Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>