force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Milestone_Deadline__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Milestone_Deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Milestone due dates to be blank when it has a kickoff date populated.</inlineHelpText>
    <label>Disable Milestone Deadline Population</label>
    <type>Checkbox</type>
</CustomField>