force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_MS_Shifts__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_MS_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting disables the shifting performed to Milestones when Project Task dates are changed.</inlineHelpText>
    <label>Disable Milestone Shifts Caused By Tasks</label>
    <type>Checkbox</type>
</CustomField>