force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_notes_on_MPP__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_notes_on_MPP__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Remove notes from the manage project plan</inlineHelpText>
    <label>zDeprecated</label>
    <type>Checkbox</type>
</CustomField>