force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Ownership_Cascade__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Ownership_Cascade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked this setting will prevent ownership assignment cascading. This means when the owner of a project or milestone changes, all child milestones or tasks assigned to the previous owner will not change to the new owner.</inlineHelpText>
    <label>Disable Ownership Cascading</label>
    <type>Checkbox</type>
</CustomField>