force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Parent_Child_Functionality__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Parent_Child_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting is used to prevent unnecessary queries from being run when parent/child relationships are not being used.</description>
    <inlineHelpText>This setting is used to prevent unnecessary queries from being run when parent/child relationships are not being used.</inlineHelpText>
    <label>Disable Parent/Child Functionality</label>
    <type>Checkbox</type>
</CustomField>