force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Project_Shifts__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Project_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting disables the shifting performed to Projects when Milestone dates are changed.</inlineHelpText>
    <label>Disable Project Shifts Caused By MS</label>
    <type>Checkbox</type>
</CustomField>