force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Resource_Assignment_Notification__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Resource_Assignment_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked resources assigned to tasks will not receive notifications when they have been assigned to a task (Premium Edition Only)</inlineHelpText>
    <label>Disable Resource Assignment Notification</label>
    <type>Checkbox</type>
</CustomField>