force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Resource_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Resource_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked resources assigned to tasks will not receive notifications when they have been assigned to a task, or when a predecessor task has been completed, or any notifications for task start dates. (Premium Edition Only)</inlineHelpText>
    <label>Disable All Resource Email Notifications</label>
    <type>Checkbox</type>
</CustomField>