force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Resources_Assigned_Updates__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Resources_Assigned_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the Resources Assigned field on Projects and Tasks will not be automatically updated. Enable this setting to prevent issues with the Resources Assigned maximum field length.</inlineHelpText>
    <label>Disable Resources Assigned Field Updates</label>
    <type>Checkbox</type>
</CustomField>