force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Stage_Sync_With_Actuals__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Stage_Sync_With_Actuals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Actual Start/Finish Dates will no longer change based on the task stage or task complete.</description>
    <inlineHelpText>When checked the Actual Start/Finish Dates will no longer change based on the task stage or task complete.</inlineHelpText>
    <label>Disable Stage Sync With Actuals</label>
    <type>Checkbox</type>
</CustomField>