force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Status_Cascade__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Status_Cascade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked this setting will prevent status cascading. This means when the status of a project or milestone changes, the status of all child milestones or tasks will not be updated to its parents status.</inlineHelpText>
    <label>Disable Status Cascading</label>
    <type>Checkbox</type>
</CustomField>