force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Task_Sync__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Task_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this checkbox is checked, Milestones PM+ will no longer automatically sync Project Tasks to Salesforce Tasks/Events. (Premium Edition Only)</inlineHelpText>
    <label>Disable Task/Event Syncing</label>
    <type>Checkbox</type>
</CustomField>