force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this checkbox is checked, Milestones PM+ triggers will not run.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>