force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Disable_Triggers_Granular__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Disable_Triggers_Granular__c</fullName>
    <description>Comma-Separated List of Apex Trigger Names to Disable in the Milestones PM+ Package</description>
    <inlineHelpText>This setting allows you to disable individual triggers within the Milestones PM+ package. Enter the Apex class names of the triggers you want to disable, separated by commas. For example: MPM4_Resource_Trigger, Milestone1_Task_Trigger.</inlineHelpText>
    <label>Granular Trigger Disablement</label>
    <type>TextArea</type>
</CustomField>