force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Display_Tasks_On_Program_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Display_Tasks_On_Program_Gantt_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the program gantt chart will display Projects, Milestones, and Tasks.</description>
    <inlineHelpText>When checked, the program gantt chart will display Projects, Milestones, and Tasks.</inlineHelpText>
    <label>Display Tasks On Program Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>