force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Email_Template_Folder_Override__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Email_Template_Folder_Override__c</fullName>
    <inlineHelpText>Overides the Default Email Template Folder custom setting by allowing you to enter the field name that will be used to source the ID of the email template folder where you will store your project email templates. (Premium Edition Only)</inlineHelpText>
    <label>Email Template Folder Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>