force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Exception_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Exception_Email_Address__c</fullName>
    <inlineHelpText>If an error occurs, an email will be sent to these email addresses with the details of what caused the issue. Multiple Email addresses may be seperated by a comma (ex: test1@email.com, test2@email.com).</inlineHelpText>
    <label>Exception Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>