force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Exclude_Weekend_Work_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Exclude_Weekend_Work_Default_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value of this setting will be used to automatically populate the Exclude Weekend Work field when creating Projects, Milestones, and Tasks.</description>
    <inlineHelpText>The value of this setting will be used to automatically populate the Exclude Weekend Work field when creating Projects, Milestones, and Tasks.</inlineHelpText>
    <label>Exclude Weekend Work Default Value</label>
    <type>Checkbox</type>
</CustomField>