force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Expense_Budget_Notifications__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Expense_Budget_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sends a notification to the project owner when the incurred expenses becomes larger than the expense budget.</inlineHelpText>
    <label>Send Expense Budget Notifications</label>
    <type>Checkbox</type>
</CustomField>