force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Fiscal_Year_Offset__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Fiscal_Year_Offset__c</fullName>
    <inlineHelpText>The month number the fiscal year begins on.</inlineHelpText>
    <label>Fiscal Year Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>