force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Import_Export_Template_Types__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Import_Export_Template_Types__c</fullName>
    <description>The template types that are available when importing or exporting Projects. Expected values are &quot;Document&quot;, &quot;File&quot;, or &quot;Both&quot;. If empty, both Documents and Salesforce Files will be available.</description>
    <inlineHelpText>The template types that are available when importing or exporting Projects. Expected values are &quot;Document&quot;, &quot;File&quot;, or &quot;Both&quot;. If empty, both Documents and Salesforce Files will be available.</inlineHelpText>
    <label>Import/Export File Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>