force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Keep_project_template_assignments__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Keep_project_template_assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this setting is selected, the assignment fields on the project, milestone, and task objects will be exported/imported with the project templates. (Premium Edition Only)</inlineHelpText>
    <label>Keep Project Template Assignments</label>
    <type>Checkbox</type>
</CustomField>