force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Keep_Weekday_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Keep_Weekday_Duration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When exclude weekend work is enabled and dates are shifted, if the start date and end dates are shifted the same number of days, then weekday duration of the item will be kept. Weekday duration may be reduced if not checked.</inlineHelpText>
    <label>Keep Weekday Duration When Shifting</label>
    <type>Checkbox</type>
</CustomField>