force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Max_Tasks_Per_Project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Max_Tasks_Per_Project__c</fullName>
    <defaultValue>500</defaultValue>
    <description>The maximum number of tasks that can belong to a project. If left blank no limit will be enforced.</description>
    <inlineHelpText>The maximum number of tasks that can belong to a project. If left blank no limit will be enforced.</inlineHelpText>
    <label>Maximum Number Of Tasks Per Project</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>