force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Merge_Time_Records__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Merge_Time_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Merges all time records for an individual day that belong to a user. This setting affects time records created in the future; existing time records will not merge upon activation of this setting.</inlineHelpText>
    <label>Merge Time Records</label>
    <type>Checkbox</type>
</CustomField>