force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Mpp_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Mpp_Page_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of records to display per page on the Manage Project Plan. Use this setting for large projects that hit Apex CPU time limit errors when updating through the Manage Project Plan.</description>
    <inlineHelpText>The number of records to display per page on the Manage Project Plan. If left blank or set to 0, all records will display on one page.</inlineHelpText>
    <label>Manage Project Plan Page Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>