force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__mpp_realtime_date_shift__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__mpp_realtime_date_shift__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked date shifts triggered by updates on the manage project plan will occur in realtime (Premium Edition Only)</inlineHelpText>
    <label>Manage Project Plan Realtime Date Shifts</label>
    <type>Checkbox</type>
</CustomField>