force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__mpp_record_type__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__mpp_record_type__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked users will be allowed to modify the record type of records on the Manage Project Plan page (Premium Edition Only)</inlineHelpText>
    <label>Show Record Type On Manage Project Plan</label>
    <type>Checkbox</type>
</CustomField>