force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Only_Create_Resource_For_SF_License__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Only_Create_Resource_For_SF_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default, a new resource is automatically created with each new user. Enable this option to only create resources for users with the &quot;Standard&quot; user type shown on each user record, determined by their profile. This setting can be used to filter out types including community users.</description>
    <inlineHelpText>By default, a new resource is automatically created with each new user. Enable this option to only create resources for users with the &quot;Standard&quot; user type shown on each user record and ignore other types such as community user types.</inlineHelpText>
    <label>Only Create Resource For SF License</label>
    <type>Checkbox</type>
</CustomField>