force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Push_Upgrade_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Push_Upgrade_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents push upgrades from installing successfully in this org (Premium Only).</description>
    <inlineHelpText>Prevents push upgrades from installing successfully in this org (Premium Only).</inlineHelpText>
    <label>Push Upgrade Opt Out</label>
    <type>Checkbox</type>
</CustomField>